<resources>
    <string name="app_name">Yummy</string>
    <string name="default_web_client_id" translatable="false">980854131503-betocnfqneptus3ohjsfi6c6c2r0u3mc.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_the_best_dish_for_you">Choose the best dish for you</string>
    <string name="search">Search</string>
    <string name="meal_of_the_day">Meal of the Day</string>
    <string name="avocado_chicken_salad">Avocado Chicken Salad</string>
    <string name="fresh_avocado_with_grilled_chicken_healthy_and_delicious">Fresh avocado with grilled chicken, healthy and delicious.</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="login_desc">Login to your account to continue your cooking journey.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_gmail">Continue with Gmail</string>
    <string name="create_new_account">Create new account</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="skip">Skip</string>
    <string name="onboarding_navBtn">Next</string>
    <string name="signupTitle">Create an account</string>
    <string name="signUp_description">Create an account to save your favorite meals and access them anywhere.</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="yummy">Yummy</string>
    <string name="planner">Planner</string>
    <string name="onboarding_item_title">Onboarding Title</string>
    <string name="onboarding_item_description">Onboarding Description</string>
    <string name="countries">Countries</string>
    <string name="meal_details">Meal Details</string>
    <string name="product_of_the_day">Product of the day</string>
    <string name="avocado_chicken_saladd">Avocado Chicken Salad</string>
    <string name="_10_40">$10.40</string>
    <string name="dessert">Dessert</string>
    <string name="categories">Categories</string>
    <string name="all">seeAll</string>
    <string name="most_popular">Most Popular</string>
    <string name="removed_from_favorites">Removed from favorites 💔</string>
    <string name="added_to_favorites">Added to favorites ❤️</string>
    <string name="meal_added_to_planner_on">"Meal added to planner on "</string>
    <string name="hi">Hi </string>
    <string name="logout">Logout</string>
    <string name="discover_your_next_meal">Discover your next meal</string>
    <string name="country">Country</string>
    <string name="ingredient">Ingredient</string>
    <string name="category">Category</string>
    <string name="search_by_filter">Search by filter:</string>
    <string name="search_for_meals">Search for meals...</string>
    <string name="my_favorites">My Favorites</string>
    <string name="no_favorites_added_yet">No favorites added yet</string>
    <string name="seeall">seeAll</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="no_internet_subtitle">It seems you are offline. You can still access your Favorites and Meal Planner.</string>


</resources>
